Simplify BootstrapDataTest